# ghastly

./: CLAUDE.md  IDEAS.md  INTEGRATION.md  PKGBUILD  README.md  ghastly-brief.md  ghastly-playbook.md  ghastly.install  install.sh  pyproject.toml
docs/: HOWTO-MANIFEST.md  ghastly.service  systemd-setup.md
src/ghastly/: __init__.py  api.py  app.py  cli.py  config.py  detail_cache.py  manifest_hints.py  notifications.py  schema.py
src/ghastly/widgets/: __init__.py  detail_panel.py  filter_bar.py  group_header.py  repo_row.py
tests/: test_config.py  test_detail_cache.py  test_manifest_hints.py  test_schema.py
