[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghastly"
version = "0.1.0"
description = "GitHub ActionS waTcher — terminal-native build monitor"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["github", "actions", "ci", "tui", "monitor", "terminal", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "watchfiles>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/PLACEHOLDER_OWNER/ghastly"
Repository = "https://github.com/PLACEHOLDER_OWNER/ghastly"
"Bug Tracker" = "https://github.com/PLACEHOLDER_OWNER/ghastly/issues"

[project.scripts]
ghastly = "ghastly.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ghastly"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "respx>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/ghastly"]
